sandbox/output
GildedRoseTest.java:178: error: cannot find symbol
            .map(GildedRose.generateUpdatedSulfuras());
                           ^
  symbol:   method generateUpdatedSulfuras()
  location: class GildedRose
1 error
